switched to yarn [tool]
i was having trouble with npm and jest, so swapped to yarn
+ added new package.json
+ edited gitignore with new yarn lock and yarn error log file names

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ node_modules/
 # no i will not commit the 200KB lock file
 # if someone wants to run the tests they can damn well install jest themselves
 package-lock.json
+
+# yarn
+yarn.lock
+yarn-error.log
